kubernetes/prediction-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-site
  namespace: opa
spec:
  selector:
    app: prediction-site
  ports:
    - name: http
      port: 80
      targetPort: http
