kubernetes/prediction-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prediction-site
  namespace: opa
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: prediction.opa.runf11s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prediction-site
            port:
              name: http
  - host: prediction.opa.f11s.run
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prediction-site
            port:
              name: http
  tls:
  - hosts:
    - prediction.opa.runf11s.com
    - prediction.opa.f11s.run
    secretName: prediction-site-tls # do not change, this is provided by Argo CD
